--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-   <h1>Un super titre</h1>
+   <h1>Un super titr !!!</h1>
    <h2>Cagnotte</h2>
+   <p> Hey man !!!
 </body>
 </html>
